# pick

./: .env.example  .gitignore  .gitleaks.toml  .gitleaksignore  .mcp.json  AUTOPWN-BRANCH-README.md  BLACKARCH_TOOLS_RESEARCH.md  Cargo.toml  Dockerfile  Dockerfile.scratch  ISSUE_QUICK_ACTION_MODAL_BUG.md  MANUAL_TEST_THREE_AGENT_PIPELINE.md  PHASE1_IMPLEMENTATION.md  PHASE2_COMPLETE.md  PR_TESTING_STRATEGY.md  README.md  REPORT_QUALITY_ISSUES_CREATED.md  RUNNING.md  SCOPE_TEST_PLAN.md  START-HERE-TOMORROW.md  TOOLS_ROADMAP_TO_100.md  check-deps.sh  emergency-wifi-fix.sh  index.yaml  install-wordlists.sh  justfile  pick-connector-0.2.0.tgz  recover-network.sh  restart-pick.sh  run-pentest.sh  session-export-20260409-130932.json  terms.md  test-dvwa-live.json  test-pick-toolchain.sh  test-seeding.sh  test-toolchain-direct.rs  test-webapp-toolchain.sh  test-whatweb-direct.sh
.githooks/: commit-msg  pre-commit
.github/workflows/: ci.yml  docker-multiarch.yml  helm-publish.yml  pii-check.yml  release.yml
.pick/: scope.toml
apps/desktop/: Cargo.toml  build.rs
apps/desktop/examples/: EGUI_GRAPH_POC_RESULTS.md  EGUI_INTEGRATION_ROADMAP.md  FEATURE_COMPARISON.md  PHASE1_1_COMPLETE.md  egui_graph_poc.rs  egui_graph_poc.rs.txt  test_graph.rs
apps/desktop/src/: graph_bridge.rs  graph_window.rs  main.rs
apps/headless/: Cargo.toml
apps/headless/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: aggression.rs  config.rs  evidence.rs  export.rs  jwt_validator.rs  lib.rs  orchestrator.rs  paths.rs  provenance.rs  seed.rs  settings.rs  specialist_spawner.rs  terminal.rs  theme_loader.rs  timeout.rs  tools.rs  url_validation.rs  validation.rs
crates/core/src/evidence/: filters.rs  mock.rs  mod.rs  transformer.rs  types.rs
crates/core/src/matrix/: auth.rs  client.rs  types.rs
crates/core/tests/: aggression_integration_test.rs  tool_integration.rs
crates/cyberchef/: Cargo.toml  README.md
crates/cyberchef/src/: lib.rs
crates/cyberchef/src/recipes/: library.rs  mod.rs
crates/cyberchef/src/tool/: cyberchef.rs  executor.rs  mod.rs
crates/platform/: Cargo.toml
crates/platform/src/: lib.rs  traits.rs
crates/platform/src/android/: mod.rs  pty_shell.rs  wifi.rs
crates/platform/src/android/proot/: mod.rs  rootfs.rs
crates/platform/src/desktop/: command.rs  mod.rs  pty_shell.rs  system.rs  wifi_attack.rs
crates/platform/src/desktop/sandbox/: config.rs  mod.rs  proot.rs
crates/platform/src/ios/: mod.rs
crates/tools/: Cargo.toml
crates/tools/docs/: EXTERNAL_DEPENDENCIES.md
crates/tools/src/: begin_scan.rs  credential_harvest.rs  cve_lookup.rs  default_creds.rs  evidence_producer.rs  execute_command.rs  inject_test_evidence.rs  lateral_movement.rs  lib.rs  port_scan.rs  provenance_support.rs  service_banner.rs  session_export.rs  smb_enum.rs  spawn_specialist.rs  util.rs  web_vuln_scan.rs  wifi_scan.rs  wifi_scan_detailed.rs
crates/tools/src/autopwn/: capture.rs  crack.rs  mod.rs  network_plan.rs  orchestrator.rs  strategy.rs  types.rs  vendor_intel.rs  wordlist.rs
crates/tools/src/autopwn/toolchain/: engine.rs  mod.rs  playbook.rs  session.rs  webapp.rs
crates/tools/src/registry/: actions.rs  mod.rs  providers.rs  types.rs
crates/tools/tests/: external_dependencies_test.rs  external_tools_runtime_test.rs  external_tools_test.rs  rustscan_runtime_test.rs  security_tests.rs  toolchain_dvwa_test.rs  toolchain_test.rs  whatweb_direct_test.rs
crates/ui/: Cargo.toml
crates/ui/src/: connector_app.rs  download_manager.rs  ipc.rs  lib.rs  liveview_server.rs  platform_helper.rs  session.rs  theme.rs  view_transitions.rs
crates/ui/src/assets/: shell_init.js
crates/ui/src/components/: app_layout.rs  config_form.rs  connecting_screen.rs  cyberchef_page.rs  cyberchef_sortable_tests.rs  dashboard.rs  icons.rs  keyboard_shortcuts.rs  knowledge_graph.rs  konami_code.rs  licenses_page.rs  log_filter_bar.rs  matrix_rain.rs  mod.rs  session_uptime.rs  settings_page.rs  shell.rs  sidebar.rs  status_bar.rs  terminal.rs  toast.rs  wifi_warning_dialog.rs  workspace_app.rs
crates/ui/src/components/chat_panel/: agent_selector.rs  constants.rs  messages.rs  mod.rs  next_steps.rs
crates/ui/src/components/chat_panel/css/: next_steps.css  style.css
crates/ui/src/components/css/: alert_dialog.css  connecting_screen.css  cyberchef_page.css  dashboard.css  help_modal.css  knowledge_graph.css  licenses_page.css  log_filter_bar.css  settings_page.css  shell.css  sidebar.css  status_bar.css  wifi_warning.css
crates/ui/src/components/file_browser/: directory.rs
crates/ui/src/liveview_connector/: api_routes.rs  auth.rs  mod.rs  token_refresh.rs  tools.rs
crates/ui/src/styles/: file_browser.css
docs/: 60_DAY_MVP_ROADMAP.md  ACTION_PLAN_PRIORITIZED.md  AI_PENTEST_COMPETITIVE_ANALYSIS.md  ARCHITECTURE_REVIEW.md  AUTOPWN.md  COMMAND_EXECUTION_AUDIT.md  COMPETITIVE_RESEARCH_SUMMARY.md  FINAL_SUMMARY.md  GAP_ANALYSIS_COMPREHENSIVE.md  GITHUB_ISSUES_60DAY_MVP.md  GITHUB_ISSUES_SUMMARY.md  INSTALLATION.md  ISSUE_CREATION_GUIDE.md  ISSUE_LABELS_MAPPING.md  ISSUE_ORGANIZATION_SUMMARY.md  ISSUE_REPO_MAPPING.md  ISSUE_SUMMARY.md  NETWORK_ASSESSMENT_IMPLEMENTATION.md  NETWORK_ASSESSMENT_PROMPT.md  NETWORK_ASSESSMENT_WORKFLOW.md  NETWORK_RECOVERY.md  P0_ISSUES_ACTION_PLAN.md  PICK_CUSTOMER_FEATURES.md  PICK_ISSUES.md  PICK_ROADMAP.md  PRD_COMPETITIVE_POSITIONING.backup-20260407-111353.md  PRD_COMPETITIVE_POSITIONING.backup-20260407-review-complete.md  QUICK_INSTALL.md  README.md  README_RESEARCH_DOCS.md  REVIEW_GUIDE.md  REVIEW_SUMMARY.md  RUNTIME_TROUBLESHOOTING.md  SECURITY_AUDIT_RESULTS.md  SECURITY_AUDIT_TRACKING.md  SECURITY_LESSONS_FROM_HONEYSLOP.md  SECURITY_README.md  SETUP_GITHUB_ISSUES.md  SYSTEM_ARCHITECTURE.backup-20260407-111353.md  SYSTEM_ARCHITECTURE.backup-20260407-113422.md  (+22 more)
e2e/: README.md  package.json  playwright.config.ts  run-tests.sh
scripts/: check-pii.sh  demo-autopwn-planning.sh  install-hooks.sh  security-audit-simple.sh  security-audit.sh  test-autopwn-safe.sh  test-monitor-mode-safe.sh  test-monitor-mode.sh
themes/: README.md  example-custom.css
(+10 files in other folders)
