[package]
name = "pentest-desktop"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "pentest-connector"
path = "src/main.rs"

[[example]]
name = "egui_graph_poc"
required-features = ["egui_poc"]

[features]
egui_poc = []

[dependencies]
# Crates
pentest-core = { workspace = true, features = ["browser-auth"] }
pentest-platform = { workspace = true, features = ["desktop-all"] }
pentest-ui = { workspace = true, features = ["connector", "shell-ws"] }
pentest-tools = { workspace = true, features = ["desktop"] }

# Dioxus with desktop feature
dioxus = { workspace = true, features = ["desktop"] }

# Logging
tracing = { workspace = true }

[dev-dependencies]
# Graph visualization (examples require eframe 0.34)
eframe = "0.34"
egui = "0.34"
egui_graphs = "0.30"
petgraph = "0.8"
dotenvy = "0.15"
futures = { workspace = true }
