[package]
name = "pentest-cyberchef"
version = "0.1.0"
edition = "2021"

[dependencies]
pentest-core = { path = "../core" }
pentest-platform = { path = "../platform" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
tempfile = { workspace = true }
tracing = { workspace = true }

# For executor implementations
base64 = "0.22"
hex = "0.4"
urlencoding = "2.1"
md5 = "0.7"
sha1 = "0.10"
sha2 = "0.10"
