[package]
name = "pentest-tools"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[features]
default = ["desktop"]
desktop = ["pentest-platform/desktop"]
android = ["pentest-platform/android"]
ios = ["pentest-platform/ios"]

[dependencies]
# Core
pentest-core = { workspace = true }
pentest-platform = { workspace = true, default-features = false }
pentest-cyberchef = { path = "../cyberchef" }

# Async
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"

# Error handling
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }

# Utilities
base64 = { workspace = true }
lazy_static = "1.4"
regex = { workspace = true }
chrono = { workspace = true }
dns-lookup = { workspace = true }
reqwest = { workspace = true }
url = "2.5"
urlencoding = "2.1"
